# my-axum-app

./: .env  .env.sample  .gitignore  Cargo.toml  diesel.toml
migrations/2023-12-26-034533_create_posts/: up.sql
src/: lib.rs  main.rs  routes.rs  schema.rs
src/database/: mod.rs
src/models/: post_model.rs
src/post/: route.rs
