[package]
name = "my-axum-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
axum-macros = "0.4.0"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.1.4", features = ["postgres"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5.0", features = ["cors"] }